apps/base/media/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi-service
spec:
  selector:
    app: ombi-deployment
  ports:
  - name: http
    port: 3579
    targetPort: 3579
    protocol: TCP
