apps/base/media/ombi/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ombi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ombi.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: ombi-service
          port: 3579
  tls:
    certResolver: letsencrypt
